# AniXapi

./: .env  .gitignore  README.md  config.py  main.py  project_settings.py  pyproject.toml  requirements.txt  settings.py
.zed/: settings.json
controllers/: anime_controller.py  auth_controller.py  favorites_controller.py  rating_controller.py  studio_controller.py
middleware/: Auth.py  auth.py
models/: anime_model.py  favorites_model.py  rating_model.py  refresh_token_model.py  studio_anime_model.py  studio_model.py  user_model.py
repositories/: anime_repository.py  auth_repository.py  base_repository.py  favorites_repository.py  rating_repository.py  studio_repository.py
routes/: anime_routes.py  auth_routes.py  favorites_routes.py  rating_routes.py  review_routes.py  studio_routes.py  user_routes.py
schemas/: anime_validator.py  auth_validator.py  favorites_validator.py  rating_validator.py  studio_validator.py
services/: anime_service.py  auth_service.py  favorites_service.py  rating_service.py  studio_service.py
utils/: custom_exceptions.py  db_connection.py  jwt_utils.py  password_utils.py  uuid_conv.py
